--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "browserify": "^16.2.0",
     "codemirror": "^5.48.0",
     "envify": "^4.1.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-replace": "^1.0.0",
     "gulp-uglify": "^3.0.0",
     "serialize-javascript": "^1.5.0",
@@ -21,12 +21,25 @@
     "yjs": "^13.3.2"
   },
   "dependencies": {
+    "@bandaloo/merge-pass": "^0.6.4",
     "acorn": "^6.2.0",
     "acorn-walk": "^6.2.0",
     "dotenv": "^8.2.0",
+    "get-pixels": "^3.3.2",
     "gibber.audio.lib": "latest",
     "gibber.core.lib": "latest",
     "gibber.graphics.lib": "latest",
+    "gibberish-dsp": "^3.2.2",
+    "gl-mat4": "^1.2.0",
+    "gl-texture2d": "^2.1.0",
+    "gl-vec3": "^1.1.3",
+    "glsl-diffuse-oren-nayar": "^1.0.2",
+    "glsl-noise": "0.0.0",
+    "glsl-sdf-primitives": "0.0.1",
+    "glsl-specular-gaussian": "^1.0.0",
+    "glsl-superformula": "^1.0.3",
+    "glsl-worley": "^1.0.2",
+    "glslify": "^7.1.1",
     "http-server": "^0.12.3",
     "node-static": "^0.7.11",
     "ws": "^7.3.1"
